<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailedExercise"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.allExercises.DetailedExerciseFragment"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_update_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:gravity="center"
            android:text="@string/update_exercise_title"
            android:paddingVertical="5dp"
            android:textColor="@color/white"
            android:fontFamily="@font/lato"
            android:textSize="35sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/muscle_types_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            android:visibility="gone"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/muscle_group_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="15dp"
            android:layout_gravity="center"
            app:cardCornerRadius="20dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/muscle_icon"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/back"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:id="@+id/muscle_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/back_body"
                    android:textColor="@color/white"
                    android:background="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/exercise_title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/lato"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/exercise_description_et"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_description"
                android:textColor="@color/black"
                android:fontFamily="@font/lato"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/weight_lo"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center|start"
                android:layout_marginHorizontal="10dp">
            </TextView>

            <include layout="@layout/number_inc_horizontal"
                android:id="@+id/weight_num"
                android:gravity="center|end"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sets_lo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/number_of_sets"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center|start"
                android:layout_marginHorizontal="10dp">
            </TextView>

            <include layout="@layout/number_inc_horizontal"
                android:id="@+id/num_sets"
                android:gravity="center|end"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reps_lo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/number_of_reps"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center|start"
                android:layout_marginHorizontal="10dp">
            </TextView>

            <include layout="@layout/number_inc_horizontal"
                android:id="@+id/num_reps"
                android:gravity="center|end"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_exercise"
            android:layout_gravity="center"
            android:gravity="center"
            app:backgroundTint="@color/black"
            app:strokeColor="@color/black"
            android:layout_marginTop="20dp"
            style="@style/red_button_theme"
            android:id="@+id/update_button"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_back"
            android:layout_gravity="bottom|end"
            android:src="@drawable/baseline_arrow_circle_right_24"
            android:backgroundTint="@color/black"/>

    </LinearLayout>

</LinearLayout>