<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="5dp"
    android:paddingVertical="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="22dp"
        android:elevation="10dp"
        android:background="@color/white_alpha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/card_view"
            android:background="@drawable/card"
            android:padding="5dp">

            <ImageView
                android:id="@+id/exercise_icon"
                android:layout_margin="5dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/back" />

            <TextView
                android:id="@+id/tv_exercise_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_no"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/exercise_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_exercise_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/back_hands_chest"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/exercise_icon" />

            <TextView
                android:id="@+id/tv_exercise_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_d"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_exercise_description"
                app:layout_constraintEnd_toStartOf="@id/weight_num"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="@+id/tv_exercise_name" />

<!--            <include layout="@layout/number_inc"-->
<!--                android:id="@+id/weight_num"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_marginHorizontal="5dp"-->
<!--                app:layout_constraintTop_toTopOf="@id/tv_exercise_weight"-->
<!--                app:layout_constraintBottom_toBottomOf="@id/tv_exercise_weight"-->
<!--                app:layout_constraintEnd_toStartOf="@+id/tv_exercise_weight1"/>-->
            <TextView
                android:id="@+id/weight_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100.0"
                android:textSize="20sp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_exercise_weight"
                app:layout_constraintEnd_toStartOf="@id/tv_exercise_weight1"
                app:layout_constraintTop_toTopOf="@+id/tv_exercise_weight" />

            <TextView
                android:id="@+id/tv_exercise_weight1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:text="@string/kg"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_exercise_weight"
                app:layout_constraintEnd_toStartOf="@+id/checkBox"
                app:layout_constraintTop_toTopOf="@+id/tv_exercise_weight" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>




        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>